--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href = "style.css" rel = "stylesheet">
+<link href = "static\style.css" rel = "stylesheet">
 <head>
-<title>VS CODE ON TOP BAYBEE</title>
+<title>2016 White Ford Fusion</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content="1; URL=new_website_url"/>
+<script >
+  
+</script>
 </head>
 <body>
 
 <div class="header">
-  <h1>Car Search</h1>
-  <p>Want a Car? We Got it.</p>
+  <h1>2016 White Ford Fusion</h1>
+  <h2>2016 White Ford Fusion</h2>
+  <h3>2016 White Ford Fusion</h3>
+  <p>2016 White Ford Fusion</p>
+  <h3>2016 White Ford Fusion</h3>
+  <h2>2016 White Ford Fusion</h2>
+  <h1>2016 White Ford Fusion</h1>
 </div>
 
 <div class="navbar">
-  <a href="https://www.carmax.com/">CarMax</a>
-  <a href="https://www.cars.com/" class="right">Cars</a>
+  <a href="/2016whitefordfusion">CarMax</a>
+  <a href="/2016whitefordfusion" class="right">Cars</a>
 </div>
 
 
   <div class="main">
-    <h2>Search For Cars</h2>
-    <form class="example" action="action_page.php">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit" class = butt>Go</button>
-      </form>
-    <p></p>
+    <h1>2016 White Ford Fusion</h1>
+    <h2>2016 White Ford Fusion</h2>
+    <h3>2016 White Ford Fusion</h3>
+    <p>2016 White Ford Fusion</p>
+    <h3>2016 White Ford Fusion</h3>
+    <h2>2016 White Ford Fusion</h2>
+    <h1>2016 White Ford Fusion</h1>
+    <img src="static/2016whitefordfusion.png" alt="2016 White Ford Fusion" class = "whitefordfusionnn">
+    <img src="static/2016whitefordfusion.jpg" alt="2016 White Ford Fusion" class = "whitefordfusionn">
+
     <br>
+    <h1>2016 White Ford Fusion</h1>
+    <h2>2016 White Ford Fusion</h2>
+    <h3>2016 White Ford Fusion</h3>
+    <p>2016 White Ford Fusion</p>
+    <h3>2016 White Ford Fusion</h3>
+    <h2>2016 White Ford Fusion</h2>
+    <h1>2016 White Ford Fusion</h1>
   </div>
 </div>
 
 <div class="footer">
-  <h2>VS ON TOP</h2>
+  <h1>2016 White Ford Fusion</h1>
+  <h2>2016 White Ford Fusion</h2>
+  <h3>2016 White Ford Fusion</h3>
+  <p>2016 White Ford Fusion</p>
+  <h3>2016 White Ford Fusion</h3>
+  <h2>2016 White Ford Fusion</h2>
+  <h1>2016 White Ford Fusion</h1>
+  
+  
 </div>
 
 </body>
